tests/this_annot_no_warnings/this_annot_no_warnings.exp
Error ----------------------------------------------------------------------------------------------------- test.js:16:5

Cannot define method `foo` [1] on `A` because `A` [2] is incompatible with number [3]. [incompatible-type]

   test.js:16:5
   16|     foo(this : number) : void
           ^^^ [1]

References:
   test.js:15:15
   15| declare class A {
                     ^ [2]
   test.js:16:16
   16|     foo(this : number) : void
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:20:5

Cannot define method `foo` [1] on `B` because `B` [2] is incompatible with number [3]. [incompatible-type]

   test.js:20:5
   20|     foo(this : number) : void {}
           ^^^ [1]

References:
   test.js:19:7
   19| class B {
             ^ [2]
   test.js:20:16
   20|     foo(this : number) : void {}
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:24:5

Cannot define method `foo` [1] on `C` because `C` [2] is incompatible with number [3]. [incompatible-type]

   test.js:24:5
   24|     foo(this : number) : void
           ^^^ [1]

References:
   test.js:23:11
   23| interface C {
                 ^ [2]
   test.js:24:16
   24|     foo(this : number) : void
                      ^^^^^^ [3]



Found 3 errors
